# transport-prop

./: .gitignore  LICENSE  README.md  compile_commands.json  environment.yml  meson.build  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: ci.yml
example/: input.toml  run-mw.py  run.py
example/diffusion_coefficient/: random_walk.py
example/msd/: input.toml  run.py
example/msd/output/: msd-x.txt  msd-xyz.txt  msd-y.txt  msd-z.txt
example/msd/plotting/: msd-fit.ipynb
example/solvation-tcf/: input.toml  run.py
example/time-averaged-rdf/: run.py
example/time-averaged-rdf/output/: rdf.txt
example/time-dependent-rdf/: run.py
example/time-dependent-rdf/dump/: dump-500000.lammpstrj
example/vacf/: input.toml  run.py
example/vacf/diffusion-fit/: diffusion_from_vacf.py
example/vacf/diffusion-fit/output/: diff.txt
example/vacf/output/: vacf.txt
include/: generic.hpp  rdf.hpp  tcf.hpp
python/transportProp/: __init__.py  io.py  misc.py  msd.py  vacf.py
tests/: aux.py  test_diffusion_einstein.py  test_diffusion_vacf.py  test_solvation_tcf.py
tests/input/: pe_energy_state0.lammpstrj  pe_energy_state1.lammpstrj  single-particle-short.xyz  three-particles-short.xyz  vel.lammpstrj
transportProp/: __init__.py  cli.py  misc.py  msd.py  structures.py  tcf.py  util.py  vacf.py
transportProp/fastcpp/: __init__.py  add.cpp  add.h  binding.cpp  generic.cpp  meson.build  rdf.cpp  tcf.cpp  tcf.hpp
validation/: README.md  msd-fit.ipynb
validation/output-from-transport-prop/: msd-x.txt  msd-xyz.txt  msd-y.txt  msd-z.txt
