[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "transportProp"
authors = [{name = "Amrita Goswami", email = "amrita@hi.is"}]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://english.hi.is/staff/amrita"
